tests/regression/error/hw4_error21.correct
boolean guard required for 'while' statement, found none
4
3
2
1
0
-1
-2
